--- a/tape_en_cours/Jour 1.ipynb
+++ b/tape_en_cours/Jour 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9469a270",
+   "id": "39277a4f",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c0f1223",
+   "id": "f57f8c79",
    "metadata": {},
    "source": [
     "# Syntaxe de python "
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19810dd1",
+   "id": "58a1f6f5",
    "metadata": {},
    "source": [
     "## Nombres"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0c1a160e",
+   "id": "a7001155",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a7f955",
+   "id": "bb16f30e",
    "metadata": {},
    "source": [
     "## Chaines de caractères"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b898e826",
+   "id": "05faf8e4",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5af6b455",
+   "id": "f5a40374",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "689c6c63",
+   "id": "a3c6a82e",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "92a65dac",
+   "id": "8e7cbb10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d6f06dc3",
+   "id": "3f1df581",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a7bc2128",
+   "id": "e0d5d0bb",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "84435d96",
+   "id": "1969b3cc",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d26c61ee",
+   "id": "e9d97b17",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2e22584a",
+   "id": "9f6d0dab",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0bc437fe",
+   "id": "58d3fe3f",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "616e987f",
+   "id": "b8cb7391",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "92c5a6f2",
+   "id": "04ec3b00",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "4fe41a9c",
+   "id": "5211ead8",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9a9e006d",
+   "id": "8b4ceddb",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "209e357b",
+   "id": "7fb139cd",
    "metadata": {},
    "outputs": [
     {
@@ -488,8 +488,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "id": "6eb6ce11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12 % 5 # 3 * 4 + 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "c7fc6eb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(1, 11):\n",
+    "    print(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "182784f2",
+   "id": "8ead249b",
    "metadata": {},
    "outputs": [],
    "source": []
