--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a942c1e6",
+   "id": "6024ee33",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -11,13 +11,17 @@
     "\n",
     "* \"installation\" de python \n",
     "* historique \n",
-    "* notion de path et installation de python `where python` (faire bien attention à rajouter Python "
+    "* notion de path et installation de python `where python` (faire bien attention à rajouter Python au path)\n",
+    "* `virtualenv`\n",
+    "    * intérêts : \n",
+    "        * avoir plusieurs projets en parrallèles (avec des versions de modules différentes)\n",
+    "        * "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "925dc852",
+   "id": "7dad4708",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c783cee",
+   "id": "4a3b56eb",
    "metadata": {},
    "outputs": [],
    "source": []
