--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6024ee33",
+   "id": "6dae4b45",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -15,13 +15,16 @@
     "* `virtualenv`\n",
     "    * intérêts : \n",
     "        * avoir plusieurs projets en parrallèles (avec des versions de modules différentes)\n",
-    "        * "
+    "        * savoir dans quel python vous installez des paquets\n",
+    "    * fonctionnement : \n",
+    "        * creation : `python -m venv LE_NOM_DU_VENV` (par convention l'environnement s'appelle `venv`) : `python -m venv venv`\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7dad4708",
+   "id": "46d16969",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -29,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3b56eb",
+   "id": "3d547901",
    "metadata": {},
    "outputs": [],
    "source": []
