--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6dae4b45",
+   "id": "aefbf632",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -17,14 +17,17 @@
     "        * avoir plusieurs projets en parrallèles (avec des versions de modules différentes)\n",
     "        * savoir dans quel python vous installez des paquets\n",
     "    * fonctionnement : \n",
-    "        * creation : `python -m venv LE_NOM_DU_VENV` (par convention l'environnement s'appelle `venv`) : `python -m venv venv`\n",
-    "        "
+    "        * creation : `python -m venv LE_NOM_DU_VENV` (par convention l'environnement s'appelle `venv` : `python -m venv venv`)\n",
+    "        * activation : \n",
+    "            * windows : `LE_NOM_DU_VENV\\Scripts\\activate`\n",
+    "            * linux / unix : `source LE_NOM_DU_VENV/bin/activate`\n",
+    "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "46d16969",
+   "id": "8859fe82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -32,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d547901",
+   "id": "2a73acf5",
    "metadata": {},
    "outputs": [],
    "source": []
