--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aefbf632",
+   "id": "261ab8e2",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -21,13 +21,14 @@
     "        * activation : \n",
     "            * windows : `LE_NOM_DU_VENV\\Scripts\\activate`\n",
     "            * linux / unix : `source LE_NOM_DU_VENV/bin/activate`\n",
-    "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à d"
+    "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à droite https://code.visualstudio.com/docs/python/environments \n",
+    "            *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8859fe82",
+   "id": "b1a02b91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a73acf5",
+   "id": "bbc8bb2d",
    "metadata": {},
    "outputs": [],
    "source": []
