--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "261ab8e2",
+   "id": "599d7493",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -22,13 +22,13 @@
     "            * windows : `LE_NOM_DU_VENV\\Scripts\\activate`\n",
     "            * linux / unix : `source LE_NOM_DU_VENV/bin/activate`\n",
     "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à droite https://code.visualstudio.com/docs/python/environments \n",
-    "            *"
+    "        * on peut utiliser l'environnement sans l'activer en allant chercher le binaire python directement avec son chemin complet : ``CHEMIN_VERS_LE_VENV/LE_NOM_DU_VENV"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1a02b91",
+   "id": "1209dce2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbc8bb2d",
+   "id": "8438548e",
    "metadata": {},
    "outputs": [],
    "source": []
