--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33092f11",
+   "id": "4ef0746b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -16,19 +16,21 @@
     "    * intérêts : \n",
     "        * avoir plusieurs projets en parrallèles (avec des versions de modules différentes)\n",
     "        * savoir dans quel python vous installez des paquets\n",
-    "    * fonctionnement : \n",
+    "    * fonctionnement (cycle de vie) : \n",
     "        * creation : `python -m venv LE_NOM_DU_VENV` (par convention l'environnement s'appelle `venv` : `python -m venv venv`)\n",
     "        * activation : \n",
     "            * windows : `LE_NOM_DU_VENV\\Scripts\\activate`\n",
     "            * linux / unix : `source LE_NOM_DU_VENV/bin/activate`\n",
     "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à droite https://code.visualstudio.com/docs/python/environments \n",
-    "        * on peut utiliser l'environnement sans l'activer en allant chercher le binaire python directement avec son chemin complet : `CHEMIN_VERS_LE_VENV\\LE_NOM_DU_VENV\\Scripts/python`"
+    "        * on peut utiliser l'environnement sans l'activer en allant chercher le binaire python directement avec son chemin complet : `CHEMIN_VERS_LE_VENV\\LE_NOM_DU_VENV\\Scripts\\python.exe`\n",
+    "        * désactivation : `deactivate`\n",
+    "        * destruction : on supprime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a71d23a8",
+   "id": "ac82463f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -36,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e91004c",
+   "id": "be591dde",
    "metadata": {},
    "outputs": [],
    "source": []
