--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ef0746b",
+   "id": "1e11cb9b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -24,13 +24,13 @@
     "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à droite https://code.visualstudio.com/docs/python/environments \n",
     "        * on peut utiliser l'environnement sans l'activer en allant chercher le binaire python directement avec son chemin complet : `CHEMIN_VERS_LE_VENV\\LE_NOM_DU_VENV\\Scripts\\python.exe`\n",
     "        * désactivation : `deactivate`\n",
-    "        * destruction : on supprime"
+    "        * destruction : on supprime le dossier `LE_NOM_DU_VENV`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac82463f",
+   "id": "deac2f35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be591dde",
+   "id": "0884a0ef",
    "metadata": {},
    "outputs": [],
    "source": []
