--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07286a47",
+   "id": "a5a3741b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -24,13 +24,17 @@
     "            * avec VSCode : on pointe l'interpréteur dessus avec le menu en bas à droite https://code.visualstudio.com/docs/python/environments \n",
     "        * on peut utiliser l'environnement sans l'activer en allant chercher le binaire python directement avec son chemin complet : `CHEMIN_VERS_LE_VENV\\LE_NOM_DU_VENV\\Scripts\\python.exe`\n",
     "        * désactivation : `deactivate`\n",
-    "        * destruction : on supprime le dossier `LE_NOM_DU_VENV`"
+    "        * destruction : on supprime le dossier `LE_NOM_DU_VENV`\n",
+    "* bonnes pratiques et configuration d'un éditeur de texte (VSCode)\n",
+    "    * linters : \n",
+    "        * pylint\n",
+    "        * mypy "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbc556d5",
+   "id": "5909d01b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -38,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69483ea0",
+   "id": "2550fc7b",
    "metadata": {},
    "outputs": [],
    "source": []
