--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5a3741b",
+   "id": "0a04ab34",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -26,15 +26,16 @@
     "        * désactivation : `deactivate`\n",
     "        * destruction : on supprime le dossier `LE_NOM_DU_VENV`\n",
     "* bonnes pratiques et configuration d'un éditeur de texte (VSCode)\n",
-    "    * linters : \n",
-    "        * pylint\n",
-    "        * mypy "
+    "    * linters (le collègue stricte qui lit votre code) : \n",
+    "        * pylint (linter généraliste)\n",
+    "        * mypy (linter spécialisé dans les vérifications de types)\n",
+    "    * "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5909d01b",
+   "id": "5b6c6a12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -42,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2550fc7b",
+   "id": "fbbb7514",
    "metadata": {},
    "outputs": [],
    "source": []
