--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a04ab34",
+   "id": "484fbd61",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -29,13 +29,14 @@
     "    * linters (le collègue stricte qui lit votre code) : \n",
     "        * pylint (linter généraliste)\n",
     "        * mypy (linter spécialisé dans les vérifications de types)\n",
-    "    * "
+    "    * autoformateur \n",
+    "        * black "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b6c6a12",
+   "id": "29f3b437",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -43,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbbb7514",
+   "id": "2d7afa17",
    "metadata": {},
    "outputs": [],
    "source": []
