--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "484fbd61",
+   "id": "485ca683",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -30,13 +30,14 @@
     "        * pylint (linter généraliste)\n",
     "        * mypy (linter spécialisé dans les vérifications de types)\n",
     "    * autoformateur \n",
-    "        * black "
+    "        * black (permet de formater automatiquement en respectant la pep8 : https://peps.python.org/pep-0008/)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "29f3b437",
+   "id": "08d70209",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -44,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7afa17",
+   "id": "eca73cf6",
    "metadata": {},
    "outputs": [],
    "source": []
