--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "485ca683",
+   "id": "6ac3f26b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -12,6 +12,8 @@
     "* \"installation\" de python \n",
     "* historique \n",
     "* notion de path et installation de python `where python` (faire bien attention à rajouter Python au path)\n",
+    "\n",
+    "## Après-midi\n",
     "* `virtualenv`\n",
     "    * intérêts : \n",
     "        * avoir plusieurs projets en parrallèles (avec des versions de modules différentes)\n",
@@ -31,13 +33,17 @@
     "        * mypy (linter spécialisé dans les vérifications de types)\n",
     "    * autoformateur \n",
     "        * black (permet de formater automatiquement en respectant la pep8 : https://peps.python.org/pep-0008/)\n",
-    "        "
+    "\n",
+    "* point syntaxe python :\n",
+    "    * opérations de bases sur les calculs / types numériques \n",
+    "    * \n",
+    "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08d70209",
+   "id": "644efea4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca73cf6",
+   "id": "e166de9d",
    "metadata": {},
    "outputs": [],
    "source": []
