--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ac3f26b",
+   "id": "575e3a06",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -36,22 +36,36 @@
     "\n",
     "* point syntaxe python :\n",
     "    * opérations de bases sur les calculs / types numériques \n",
-    "    * \n",
+    "    * création de chaines \n",
+    "    * types spécifiques de chaines : `raw strings` (`r\"blabla\"`) pour les chemins windows, `format string` (`f\"{une_variable}\"`)\n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "644efea4",
+   "execution_count": 3,
+   "id": "83852fdc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.4'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"{2+2}\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e166de9d",
+   "id": "7206e8e0",
    "metadata": {},
    "outputs": [],
    "source": []
