--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "575e3a06",
+   "id": "01b52f84",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -38,34 +38,37 @@
     "    * opérations de bases sur les calculs / types numériques \n",
     "    * création de chaines \n",
     "    * types spécifiques de chaines : `raw strings` (`r\"blabla\"`) pour les chemins windows, `format string` (`f\"{une_variable}\"`)\n",
+    "    * connaitres tou\n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "83852fdc",
+   "execution_count": 8,
+   "id": "8b9ab9a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'.4'"
+       "'ma_variable=2'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f\"{2+2}\""
+    "# fstring pour du débug\n",
+    "ma_variable = 2\n",
+    "f\"{ma_variable=}\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7206e8e0",
+   "id": "5a837e05",
    "metadata": {},
    "outputs": [],
    "source": []
