--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01b52f84",
+   "id": "70dea7a2",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -38,14 +38,17 @@
     "    * opérations de bases sur les calculs / types numériques \n",
     "    * création de chaines \n",
     "    * types spécifiques de chaines : `raw strings` (`r\"blabla\"`) pour les chemins windows, `format string` (`f\"{une_variable}\"`)\n",
-    "    * connaitres tou\n",
+    "    * connaitres toutes les méthodes disponibles pour un objet : \n",
+    "        * la doc python \n",
+    "        * `dir(ma_variable)`\n",
+    "    * connaitre la documentation pour une variable : `help(ma_variable)`\n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b9ab9a6",
+   "id": "6bc6afb5",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a837e05",
+   "id": "36c767c3",
    "metadata": {},
    "outputs": [],
    "source": []
