--- a/tape_en_cours/Jour 1.ipynb
+++ b/tape_en_cours/Jour 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39277a4f",
+   "id": "18077262",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f57f8c79",
+   "id": "e1bdaa11",
    "metadata": {},
    "source": [
     "# Syntaxe de python "
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a1f6f5",
+   "id": "3bec8cf1",
    "metadata": {},
    "source": [
     "## Nombres"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a7001155",
+   "id": "abbbdb1e",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb16f30e",
+   "id": "c6be8d4c",
    "metadata": {},
    "source": [
     "## Chaines de caractères"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "05faf8e4",
+   "id": "fbd55976",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f5a40374",
+   "id": "a0b0cc23",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a3c6a82e",
+   "id": "23c8f005",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8e7cbb10",
+   "id": "3f1718af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3f1df581",
+   "id": "80d97e18",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e0d5d0bb",
+   "id": "11d7ee8c",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "1969b3cc",
+   "id": "365c2351",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e9d97b17",
+   "id": "d8b18b27",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9f6d0dab",
+   "id": "a74bfe1a",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "58d3fe3f",
+   "id": "da66b33e",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b8cb7391",
+   "id": "f8419a57",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "04ec3b00",
+   "id": "db69e350",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5211ead8",
+   "id": "fce6e0b1",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8b4ceddb",
+   "id": "e26b4e2c",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "7fb139cd",
+   "id": "b0c9cea7",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "6eb6ce11",
+   "id": "4d214cb1",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "c7fc6eb3",
+   "id": "dd6df5a1",
    "metadata": {},
    "outputs": [
     {
@@ -537,8 +537,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "dacc6318",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function dir in module builtins:\n",
+      "\n",
+      "dir(...)\n",
+      "    dir([object]) -> list of strings\n",
+      "    \n",
+      "    If called without an argument, return the names in the current scope.\n",
+      "    Else, return an alphabetized list of names comprising (some of) the attributes\n",
+      "    of the given object, and of attributes reachable from it.\n",
+      "    If the object supplies a method named __dir__, it will be used; otherwise\n",
+      "    the default dir() logic is used and returns:\n",
+      "      for a module object: the module's attributes.\n",
+      "      for a class object:  its attributes, and recursively the attributes\n",
+      "        of its bases.\n",
+      "      for any other object: its attributes, its class's attributes, and\n",
+      "        recursively the attributes of its class's base classes.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8ead249b",
+   "id": "f9aa1e33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c4f253",
    "metadata": {},
    "outputs": [],
    "source": []
