--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62c4e39d",
+   "id": "2bc534b4",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -42,13 +42,15 @@
     "        * la doc python \n",
     "        * `dir(ma_variable)`\n",
     "    * connaitre la documentation pour une variable : `help(ma_variable)`\n",
+    "    * manipulations de conteneurs \n",
+    "        * accès à un élément précis : mon_conteneur[index] (l'index \n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6536438d",
+   "id": "01b96618",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e06a5e",
+   "id": "71ef50a0",
    "metadata": {},
    "outputs": [],
    "source": []
